Fix secondary nav alignment. Fix issue with pimary menu not being center aligned in condensed mode.

--- a/src/components/page-header/page-header.component.less
+++ b/src/components/page-header/page-header.component.less
@@ -2,6 +2,22 @@ ux-page-header {
     display: block;
     width: 100%;
 
+    .ux-page-header .page-header-navigation,
+    .ux-page-header-secondary .page-header-navigation {
+        display: flex;
+        justify-content: center;
+        flex: 1;
+        margin: 0;
+
+        &.left {
+            justify-content: flex-start;
+        }
+
+        &.right {
+            justify-content: flex-end;
+        }
+    }
+
     .ux-page-header {
         height: 130px;
         width: 100%;
@@ -112,21 +128,6 @@ ux-page-header {
             }
         }
 
-        .page-header-navigation {
-            display: flex;
-            justify-content: center;
-            flex: 1;
-            margin: 0 120px;
-
-            &.left {
-                justify-content: flex-start;
-            }
-
-            &.right {
-                justify-content: flex-end;
-            }
-        }
-
         .page-header-icon-menus {
             position: absolute;
             top: 0;
@@ -141,12 +142,18 @@ ux-page-header {
 
             .page-header-condensed-content {
                 position: relative;
+                width: 100%;
                 display: flex;
 
                 .page-header-breadcrumbs {
+                    position: absolute;
+                    top: 0;
+                    left: 0;
                     display: flex;
                     align-items: center;
                     margin-right: 10px;
+                    height: 57px;
+                    align-items: center;
 
                     ux-breadcrumbs {
                         height: 22px;
@@ -178,13 +185,13 @@ ux-page-header {
                 }
 
                 .page-header-navigation {
-                    display: flex;
-                    flex: 1;
-                    justify-content: center;
+                    width: 100%;
                 }
 
                 .page-header-icon-menus {
-                    position: static;
+                    position: absolute;
+                    top: 0;
+                    right: 0;
                 }
             }
         }
